Add svelte-awesome-icons and initial pass of new flagging button for potential illegal content.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/modules/odr_frontend/src/routes/admin/moderation/moderation.css
+++ b/modules/odr_frontend/src/routes/admin/moderation/moderation.css
@@ -88,3 +88,12 @@
   h1 {
     padding: 0 0 1rem 0;
   }
+
+  .variant-filled-warning {
+    background-color: #ffc107;
+    color: #000;
+  }
+
+  .variant-filled-warning:hover {
+    background-color: #e0a800;
+  }
