--- a/modules/odr_frontend/src/app.postcss
+++ b/modules/odr_frontend/src/app.postcss
@@ -14,3 +14,11 @@ body {
 	src: url('/fonts/SpaceGrotesk.ttf');
 	font-display: swap;
 }
+
+.passthrough-div {
+  pointer-events: none;
+}
+
+.passthrough-div * {
+  pointer-events: auto;
+}
