Run skeleton-3 migration process.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/modules/odr_frontend/src/app.css
+++ b/modules/odr_frontend/src/app.css
@@ -1,3 +1,8 @@
+@import "@skeletonlabs/skeleton";
+
+@import "@skeletonlabs/skeleton/optional/presets";
+
+/* Add your theme import for your theme: "omi-custom-theme" here */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
