Update custom skeleton theme to v3.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/modules/odr_frontend/src/app.css
+++ b/modules/odr_frontend/src/app.css
@@ -2,7 +2,8 @@
 
 @import "@skeletonlabs/skeleton/optional/presets";
 
-/* Add your theme import for your theme: "omi-custom-theme" here */
+@import "../omi-theme.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
