Fix omi theme and tailwind css not being loaded properly.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/modules/odr_frontend/src/app.css
+++ b/modules/odr_frontend/src/app.css
@@ -4,10 +4,7 @@
 
 @import "../omi-theme.css";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@tailwind variants;
+@import "tailwindcss";
 
 html,
 body {
