--- a/modules/odr_frontend/omi-theme.css
+++ b/modules/odr_frontend/omi-theme.css
@@ -4,7 +4,7 @@
 	--text-scaling: 1.067;
 	--base-font-color: var(--color-surface-950);
 	--base-font-color-dark: var(--color-surface-50);
-	--base-font-family: system-ui;
+	--base-font-family: 'Liberation Mono', system-ui;
 	--base-font-size: inherit;
 	--base-line-height: inherit;
 	--base-font-weight: normal;
