Update omi theme so primary colour is OMI purple and switch all hovers to use it.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/modules/odr_frontend/omi-theme.css
+++ b/modules/odr_frontend/omi-theme.css
@@ -3,7 +3,7 @@
 [data-theme='omi-custom-theme'] {
 	--text-scaling: 1.067;
 	--base-font-color: var(--color-surface-950);
-	--base-font-color-dark: var(--color-surface-50);
+	--base-font-color-dark: var(--color-secondary-50);
 	--base-font-family: 'Liberation Mono', system-ui;
 	--base-font-size: inherit;
 	--base-line-height: inherit;
@@ -36,41 +36,41 @@
 	--default-ring-width: 1px;
 	--body-background-color: var(--color-surface-50);
 	--body-background-color-dark: var(--color-surface-950);
-	--color-primary-50: oklch(92.81% 0.01 219.48deg);
-	--color-primary-100: oklch(84.54% 0.02 221.81deg);
-	--color-primary-200: oklch(75.92% 0.04 225.59deg);
-	--color-primary-300: oklch(67.26% 0.05 223.54deg);
-	--color-primary-400: oklch(58.35% 0.06 226.31deg);
-	--color-primary-500: oklch(49.6% 0.07 227.92deg);
-	--color-primary-600: oklch(45.97% 0.07 228.4deg);
-	--color-primary-700: oklch(42.26% 0.06 229deg);
-	--color-primary-800: oklch(38.74% 0.05 226.67deg);
-	--color-primary-900: oklch(34.86% 0.05 227.24deg);
-	--color-primary-950: oklch(30.88% 0.04 228.04deg);
+	--color-primary-50: oklch(90.08% 0.05 294.73deg);
+	--color-primary-100: oklch(85% 0.08 293.92deg);
+	--color-primary-200: oklch(79.71% 0.11 293.6deg);
+	--color-primary-300: oklch(74.63% 0.14 291.91deg);
+	--color-primary-400: oklch(69.51% 0.17 290.98deg);
+	--color-primary-500: oklch(64.78% 0.2 289.27deg);
+	--color-primary-600: oklch(61.43% 0.18 288.86deg);
+	--color-primary-700: oklch(58.19% 0.17 288.68deg);
+	--color-primary-800: oklch(54.58% 0.16 288.39deg);
+	--color-primary-900: oklch(51.25% 0.14 288.08deg);
+	--color-primary-950: oklch(47.72% 0.13 287.24deg);
 	--color-primary-contrast-dark: var(--color-primary-950);
 	--color-primary-contrast-light: var(--color-primary-50);
 	--color-primary-contrast-50: var(--color-primary-contrast-dark);
 	--color-primary-contrast-100: var(--color-primary-contrast-dark);
 	--color-primary-contrast-200: var(--color-primary-contrast-dark);
 	--color-primary-contrast-300: var(--color-primary-contrast-dark);
-	--color-primary-contrast-400: var(--color-primary-contrast-light);
+	--color-primary-contrast-400: var(--color-primary-contrast-dark);
 	--color-primary-contrast-500: var(--color-primary-contrast-light);
 	--color-primary-contrast-600: var(--color-primary-contrast-light);
 	--color-primary-contrast-700: var(--color-primary-contrast-light);
 	--color-primary-contrast-800: var(--color-primary-contrast-light);
 	--color-primary-contrast-900: var(--color-primary-contrast-light);
 	--color-primary-contrast-950: var(--color-primary-contrast-light);
-	--color-secondary-50: oklch(95.49% 0.02 181.2deg);
-	--color-secondary-100: oklch(90.56% 0.05 181.45deg);
-	--color-secondary-200: oklch(85.86% 0.08 179.59deg);
-	--color-secondary-300: oklch(81.18% 0.1 179.28deg);
-	--color-secondary-400: oklch(77.07% 0.12 177.02deg);
-	--color-secondary-500: oklch(73.34% 0.13 174.97deg);
-	--color-secondary-600: oklch(67.69% 0.12 174.94deg);
-	--color-secondary-700: oklch(61.92% 0.11 174.91deg);
-	--color-secondary-800: oklch(56.31% 0.1 174.99deg);
-	--color-secondary-900: oklch(50.26% 0.09 174.94deg);
-	--color-secondary-950: oklch(44.01% 0.08 174.87deg);
+	--color-secondary-50: oklch(100% 0 none);
+	--color-secondary-100: oklch(100% 0 none);
+	--color-secondary-200: oklch(100% 0 none);
+	--color-secondary-300: oklch(100% 0 none);
+	--color-secondary-400: oklch(100% 0 none);
+	--color-secondary-500: oklch(100% 0 none);
+	--color-secondary-600: oklch(100% 0 none);
+	--color-secondary-700: oklch(100% 0 none);
+	--color-secondary-800: oklch(100% 0 none);
+	--color-secondary-900: oklch(100% 0 none);
+	--color-secondary-950: oklch(100% 0 none);
 	--color-secondary-contrast-dark: var(--color-secondary-950);
 	--color-secondary-contrast-light: var(--color-secondary-50);
 	--color-secondary-contrast-50: var(--color-secondary-contrast-dark);
@@ -80,45 +80,45 @@
 	--color-secondary-contrast-400: var(--color-secondary-contrast-dark);
 	--color-secondary-contrast-500: var(--color-secondary-contrast-dark);
 	--color-secondary-contrast-600: var(--color-secondary-contrast-dark);
-	--color-secondary-contrast-700: var(--color-secondary-contrast-light);
-	--color-secondary-contrast-800: var(--color-secondary-contrast-light);
-	--color-secondary-contrast-900: var(--color-secondary-contrast-light);
-	--color-secondary-contrast-950: var(--color-secondary-contrast-light);
-	--color-tertiary-50: oklch(91.63% 0.03 339.48deg);
-	--color-tertiary-100: oklch(82.1% 0.06 339.79deg);
-	--color-tertiary-200: oklch(72.68% 0.09 341.17deg);
-	--color-tertiary-300: oklch(63.3% 0.12 342.28deg);
-	--color-tertiary-400: oklch(54.52% 0.15 344.36deg);
-	--color-tertiary-500: oklch(46.66% 0.17 347.06deg);
-	--color-tertiary-600: oklch(43.17% 0.16 346.75deg);
-	--color-tertiary-700: oklch(39.78% 0.14 346.8deg);
-	--color-tertiary-800: oklch(36.06% 0.13 346.26deg);
-	--color-tertiary-900: oklch(32.52% 0.11 346.26deg);
-	--color-tertiary-950: oklch(28.7% 0.1 345.6deg);
+	--color-secondary-contrast-700: var(--color-secondary-contrast-dark);
+	--color-secondary-contrast-800: var(--color-secondary-contrast-dark);
+	--color-secondary-contrast-900: var(--color-secondary-contrast-dark);
+	--color-secondary-contrast-950: var(--color-secondary-contrast-dark);
+	--color-tertiary-50: oklch(0% 0 none);
+	--color-tertiary-100: oklch(0% 0 none);
+	--color-tertiary-200: oklch(0% 0 none);
+	--color-tertiary-300: oklch(0% 0 none);
+	--color-tertiary-400: oklch(0% 0 none);
+	--color-tertiary-500: oklch(0% 0 none);
+	--color-tertiary-600: oklch(0% 0 none);
+	--color-tertiary-700: oklch(0% 0 none);
+	--color-tertiary-800: oklch(0% 0 none);
+	--color-tertiary-900: oklch(0% 0 none);
+	--color-tertiary-950: oklch(0% 0 none);
 	--color-tertiary-contrast-dark: var(--color-tertiary-950);
 	--color-tertiary-contrast-light: var(--color-tertiary-50);
 	--color-tertiary-contrast-50: var(--color-tertiary-contrast-dark);
 	--color-tertiary-contrast-100: var(--color-tertiary-contrast-dark);
 	--color-tertiary-contrast-200: var(--color-tertiary-contrast-dark);
 	--color-tertiary-contrast-300: var(--color-tertiary-contrast-dark);
-	--color-tertiary-contrast-400: var(--color-tertiary-contrast-light);
-	--color-tertiary-contrast-500: var(--color-tertiary-contrast-light);
-	--color-tertiary-contrast-600: var(--color-tertiary-contrast-light);
-	--color-tertiary-contrast-700: var(--color-tertiary-contrast-light);
-	--color-tertiary-contrast-800: var(--color-tertiary-contrast-light);
-	--color-tertiary-contrast-900: var(--color-tertiary-contrast-light);
-	--color-tertiary-contrast-950: var(--color-tertiary-contrast-light);
+	--color-tertiary-contrast-400: var(--color-tertiary-contrast-dark);
+	--color-tertiary-contrast-500: var(--color-tertiary-contrast-dark);
+	--color-tertiary-contrast-600: var(--color-tertiary-contrast-dark);
+	--color-tertiary-contrast-700: var(--color-tertiary-contrast-dark);
+	--color-tertiary-contrast-800: var(--color-tertiary-contrast-dark);
+	--color-tertiary-contrast-900: var(--color-tertiary-contrast-dark);
+	--color-tertiary-contrast-950: var(--color-tertiary-contrast-dark);
 	--color-success-50: oklch(95.36% 0.04 150.8deg);
-	--color-success-100: oklch(90.6% 0.09 149.56deg);
-	--color-success-200: oklch(85.91% 0.13 148.44deg);
-	--color-success-300: oklch(81.99% 0.18 147.22deg);
-	--color-success-400: oklch(78.32% 0.21 145.85deg);
-	--color-success-500: oklch(75.53% 0.23 144.43deg);
-	--color-success-600: oklch(69.58% 0.21 144.5deg);
-	--color-success-700: oklch(63.78% 0.2 144.55deg);
-	--color-success-800: oklch(57.57% 0.18 144.65deg);
-	--color-success-900: oklch(51.47% 0.16 144.74deg);
-	--color-success-950: oklch(44.89% 0.13 144.92deg);
+	--color-success-100: oklch(90.44% 0.09 149.23deg);
+	--color-success-200: oklch(86.15% 0.13 148.11deg);
+	--color-success-300: oklch(81.97% 0.17 146.96deg);
+	--color-success-400: oklch(78.57% 0.2 145.75deg);
+	--color-success-500: oklch(75.41% 0.23 144.47deg);
+	--color-success-600: oklch(69.72% 0.21 144.55deg);
+	--color-success-700: oklch(63.66% 0.19 144.63deg);
+	--color-success-800: oklch(57.7% 0.17 144.62deg);
+	--color-success-900: oklch(51.33% 0.15 144.73deg);
+	--color-success-950: oklch(45.04% 0.13 144.93deg);
 	--color-success-contrast-dark: var(--color-success-950);
 	--color-success-contrast-light: var(--color-success-50);
 	--color-success-contrast-50: var(--color-success-contrast-dark);
@@ -132,17 +132,17 @@
 	--color-success-contrast-800: var(--color-success-contrast-light);
 	--color-success-contrast-900: var(--color-success-contrast-light);
 	--color-success-contrast-950: var(--color-success-contrast-light);
-	--color-warning-50: oklch(96.03% 0.03 93.72deg);
-	--color-warning-100: oklch(91.81% 0.06 93.83deg);
-	--color-warning-200: oklch(87.58% 0.09 94.73deg);
-	--color-warning-300: oklch(83.36% 0.12 93.51deg);
-	--color-warning-400: oklch(79.36% 0.14 93.13deg);
-	--color-warning-500: oklch(75.61% 0.15 90.97deg);
-	--color-warning-600: oklch(69.86% 0.14 91.6deg);
-	--color-warning-700: oklch(63.89% 0.12 91.08deg);
-	--color-warning-800: oklch(57.89% 0.11 91.89deg);
-	--color-warning-900: oklch(51.61% 0.1 91.25deg);
-	--color-warning-950: oklch(45.26% 0.09 92.37deg);
+	--color-warning-50: oklch(96% 0.03 94.32deg);
+	--color-warning-100: oklch(91.77% 0.06 94.41deg);
+	--color-warning-200: oklch(87.55% 0.09 95.1deg);
+	--color-warning-300: oklch(83.31% 0.12 94.06deg);
+	--color-warning-400: oklch(79.33% 0.14 93.49deg);
+	--color-warning-500: oklch(75.59% 0.15 91.2deg);
+	--color-warning-600: oklch(69.94% 0.14 91.39deg);
+	--color-warning-700: oklch(63.87% 0.13 91.44deg);
+	--color-warning-800: oklch(57.97% 0.12 91.7deg);
+	--color-warning-900: oklch(51.58% 0.1 91.82deg);
+	--color-warning-950: oklch(45.33% 0.09 92.29deg);
 	--color-warning-contrast-dark: var(--color-warning-950);
 	--color-warning-contrast-light: var(--color-warning-50);
 	--color-warning-contrast-50: var(--color-warning-contrast-dark);
@@ -156,17 +156,17 @@
 	--color-warning-contrast-800: var(--color-warning-contrast-light);
 	--color-warning-contrast-900: var(--color-warning-contrast-light);
 	--color-warning-contrast-950: var(--color-warning-contrast-light);
-	--color-error-50: oklch(93.11% 0.02 36.55deg);
-	--color-error-100: oklch(85.43% 0.06 35.05deg);
-	--color-error-200: oklch(77.65% 0.09 34.81deg);
-	--color-error-300: oklch(70.53% 0.12 34.95deg);
-	--color-error-400: oklch(63.75% 0.16 35.12deg);
-	--color-error-500: oklch(58.3% 0.19 34.48deg);
-	--color-error-600: oklch(53.78% 0.17 34.45deg);
-	--color-error-700: oklch(49.45% 0.16 34.69deg);
-	--color-error-800: oklch(44.73% 0.14 34.68deg);
-	--color-error-900: oklch(40.2% 0.12 35.04deg);
-	--color-error-950: oklch(35.23% 0.11 35.07deg);
+	--color-error-50: oklch(93.11% 0.02 37.09deg);
+	--color-error-100: oklch(85.17% 0.05 34.73deg);
+	--color-error-200: oklch(77.56% 0.09 34.19deg);
+	--color-error-300: oklch(70.41% 0.12 35.08deg);
+	--color-error-400: oklch(63.9% 0.16 35.04deg);
+	--color-error-500: oklch(58.35% 0.19 34.32deg);
+	--color-error-600: oklch(53.83% 0.17 34.29deg);
+	--color-error-700: oklch(49.39% 0.16 34.39deg);
+	--color-error-800: oklch(44.78% 0.14 34.73deg);
+	--color-error-900: oklch(40.11% 0.13 34.94deg);
+	--color-error-950: oklch(35.13% 0.11 34.99deg);
 	--color-error-contrast-dark: var(--color-error-950);
 	--color-error-contrast-light: var(--color-error-50);
 	--color-error-contrast-50: var(--color-error-contrast-dark);
@@ -180,17 +180,17 @@
 	--color-error-contrast-800: var(--color-error-contrast-light);
 	--color-error-contrast-900: var(--color-error-contrast-light);
 	--color-error-contrast-950: var(--color-error-contrast-light);
-	--color-surface-50: oklch(90.44% 0 196.59deg);
-	--color-surface-100: oklch(79.16% 0.01 210.83deg);
-	--color-surface-200: oklch(67.49% 0.01 225.06deg);
-	--color-surface-300: oklch(55.42% 0.01 215.84deg);
-	--color-surface-400: oklch(42.55% 0.02 223.01deg);
-	--color-surface-500: oklch(28.64% 0.02 224.66deg);
-	--color-surface-600: oklch(26.76% 0.02 228.1deg);
-	--color-surface-700: oklch(25.14% 0.02 225.54deg);
-	--color-surface-800: oklch(23.15% 0.02 224.43deg);
-	--color-surface-900: oklch(21.47% 0.01 220.3deg);
-	--color-surface-950: oklch(19.44% 0.01 225.91deg);
+	--color-surface-50: oklch(90.37% 0 none);
+	--color-surface-100: oklch(79.08% 0 228.52deg);
+	--color-surface-200: oklch(67.62% 0.01 223.38deg);
+	--color-surface-300: oklch(55.32% 0.01 222.1deg);
+	--color-surface-400: oklch(42.67% 0.02 221.66deg);
+	--color-surface-500: oklch(28.74% 0.02 223.49deg);
+	--color-surface-600: oklch(26.87% 0.02 227.43deg);
+	--color-surface-700: oklch(25.25% 0.02 224.28deg);
+	--color-surface-800: oklch(23.19% 0.01 220.19deg);
+	--color-surface-900: oklch(21.51% 0.01 214.65deg);
+	--color-surface-950: oklch(19.49% 0.01 220.02deg);
 	--color-surface-contrast-dark: var(--color-surface-950);
 	--color-surface-contrast-light: var(--color-surface-50);
 	--color-surface-contrast-50: var(--color-surface-contrast-dark);
